# baheth-ss

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.kamal/hooks/: post-deploy.sample  pre-build.sample  pre-connect  pre-connect.sample  pre-deploy.sample
baheth_ss/: main.py
config/: deploy-domain.yml  deploy.yml
src/baheth_ss/: main.py  settings.py
src/baheth_ss/pipelines/: sentence_embedding_pipeline.py
src/baheth_ss/requests/: embed_request.py  hadiths_nearest_neighbors_request.py  hadiths_semantic_search_request.py
src/baheth_ss/responses/: embed_response.py  hadith_semantic_search_response.py  hadiths_count_response.py  hadiths_nearest_neighbors_response.py  hadiths_semantic_search_response.py
src/baheth_ss/routers/: embed.py  hadiths.py
src/baheth_ss/types/: hadiths_data.py
src/baheth_ss/utils/: data.py
tools/: baheth_data_builder.py  lk_data_build.py  lk_data_builder.py
tools/data_builder/: args.py  main.py
tools/data_builder/constants/: lk.py  model.py
tools/data_builder/utils/: common.py  dorar.py  lk.py  model.py
tools/hadith_data_builder/: args.py  main.py
tools/hadith_data_builder/utils/: dorar.py  lk.py
