[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "baheth_ss"
version = "0.0.1"
description = "الشيفرة البرمجية لدعم البحث بالمعنى على منصة باحث"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [{ name = "الكتب المٌيسّرة", email = "easybooksdev@gmail.com" }]
keywords = ["baheth", "semantic search", "semantic similarity"]
dependencies = [
    "fastapi==0.103.1",
    "huggingface-hub==0.16.4",
    "optimum[onnxruntime]==1.13.1",
    "pydantic-settings==2.0.3",
    "uvicorn==0.23.2",
]

[project.optional-dependencies]
dev = [
    "black==23.9.1",
    "isort==5.12.0",
    "pandas==2.1.0",
    "pre-commit==3.4.0",
    "PyArabic==0.6.15",
]

[project.urls]
homepage = "https://github.com/ieasybooks/baheth_ss"
repository = "https://github.com/ieasybooks/baheth_ss"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
src_paths = "src,tools"
line_length = 120
lines_between_types = 1
lines_after_imports = 2
case_sensitive = true
include_trailing_comma = true

[tool.mypy]
files = ["src", "tools"]
follow_imports = "skip"
strict = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true
