[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "baheth_ss"
version = "0.0.1"
description = "الشيفرة البرمجية لدعم البحث بالمعنى على منصة باحث"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ieasybooks/baheth_ss"
repository = "https://github.com/ieasybooks/baheth_ss"
authors = ["ieasybooks <easybooksdev@gmail.com>"]
keywords = ["baheth", "semantic search", "semantic similarity"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.108.0"
gunicorn = "21.2.0"
huggingface-hub = "0.20.3"
optimum = { version = "1.16.2", extras = ["onnxruntime"] }
pydantic-settings = "2.1.0"
torch = [
    { markers = "platform_machine == 'arm64' or platform_machine == 'aarch64'", python = ">=3.10", version = "2.0.1", source = "pypi" },
    { markers = "platform_machine == 'amd64' or platform_machine == 'x86_64'", python = ">=3.10", version = "2.0.1", source = "pytorch-cpu" },
]
transformers = "4.35.2"
uvicorn = { version = "0.25.0", extras = ["standard"] }

[tool.poetry.dev-dependencies]
black = "24.3.0"
isort = "5.12.0"
pandas = "2.1.4"
pre-commit = "3.4.0"
PyArabic = "0.6.15"
tqdm = "4.66.1"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
src_paths = ["src", "tools"]
line_length = 120
lines_between_types = 1
lines_after_imports = 2
case_sensitive = true
include_trailing_comma = true

[tool.mypy]
files = ["src", "tools"]
follow_imports = "skip"
strict = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true
